# python-best-practices-cookiecutter

./: LICENSE  README.md  cookiecutter.json  cookiecutter.json.license
hooks/: post_gen_project.py  pre_gen_project.py
templates/: ACKNOWLEDGMENTS.md  CONTRIBUTORS.md
{{cookiecutter.project_slug}}/: .bandit  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  poetry.lock.license  poetry.toml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: publish-docker.yml  test.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __main__.py  core.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_core.py
{{cookiecutter.repo_name}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: publish-docker.yml  test.yml
