# SPDX-FileCopyrightText: {{cookiecutter.year}} {{cookiecutter.author_name}} <{{cookiecutter.author_email}}>
#
# SPDX-License-Identifier: {{cookiecutter.license}}


[tool.poetry]

name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
license = "{{cookiecutter.license}}"

authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]

python = "~{python_version}"

# Package's requirements
# minilog = "^1.5"
# click = "^7.0"

[tool.poetry.dev-dependencies]

black = "==20.8b1"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.black]

line-length = 79
target-version = ["py36", "py37", "py38", "py39"]

[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
